# chartix

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
data/: README.md
data/billboard/: billboard-metadata.json
data/billboard/billboard-club/: 1980.csv  1981.csv  1982.csv  1983.csv  1984.csv  1985.csv  1986.csv  1987.csv  1988.csv  1989.csv  1990.csv  1991.csv  1992.csv  1993.csv  1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv
data/billboard/billboard-hot100/: 1980.csv  1981.csv  1982.csv  1983.csv  1984.csv  1985.csv  1986.csv  1987.csv  1988.csv  1989.csv  1990.csv  1991.csv  1992.csv  1993.csv  1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv
data/billboard/billboard-latin/: 1986.csv  1987.csv  1988.csv  1989.csv  1990.csv  1991.csv  1992.csv  1993.csv  1994.csv  1995.csv  1996.csv  1997.csv  1998.csv  1999.csv
docs/: api.md  cli.md  index.md  installation.md
src/chartix/: __init__.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_api_refactor.py  test_api_utils.py  test_init_metadata.py  test_search.py
