[project]
name = "chartix"
version = "0.1.0"
description = "Query and manage international music charts data"
readme = "README.md"
authors = [
    { name = "dguerrerom", email = "dguerrerom@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "polars-distance>=0.5.3",
    "polars[rtcompat]>=1.39.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[project.scripts]
chartix = "chartix.cli:cli"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "W", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src/music_charts_toolkit --cov-report=term-missing"

urls = { Homepage = "https://github.com/dguerrerom/chartix" }